tests/_errors/unclosed_multiline_comment/unclosed_multiline_comment.hdz
/*
oops forgor to close the comment ohhh nooo

